--- a/Lesson01-Favorite-Toys/T01.01-Exercise-CreateLayout/app/build.gradle
+++ b/Lesson01-Favorite-Toys/T01.01-Exercise-CreateLayout/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 24
     buildToolsVersion '25.0.2'
 
     defaultConfig {
@@ -19,9 +19,6 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:25.1.0'
-
-    // TODO (7) Remove the ConstraintLayout dependency as we aren't using it for these simple projects
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
 }
